[package]
name = "bench96bit"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.11", features = ["derive"] }
core_affinity = "0.8.1"
paste = "1.0.14"
region = "3.0.0"
seq-macro = "0.3.5"
